<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25sp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/addressContainer"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/address"
                android:textSize="24sp"
                android:text="@string/address"
                android:fontFamily="@font/montserrat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/updatedAt"
                android:fontFamily="@font/montserrat"
                android:textSize="14sp"
                android:text="@string/updatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/status"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat"
                android:layout_gravity="center"
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/temp"
                android:textSize="90sp"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:text="@string/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:id="@+id/minTemp"
                    android:text="@string/minTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                
                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/maxTemp"
                    android:text="@string/maxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/detailContainer"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" >
                    
                    <ImageView

                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        app:tint="#FFF" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:text="Восход"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:textSize="14sp"
                        android:text="5:30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" >

                    <ImageView

                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        app:tint="#FFF" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:text="Закат"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/sunset"
                        android:textSize="14sp"
                        android:text="20:30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" >

                    <ImageView

                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="#FFF" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:text="Ветер"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/wind"
                        android:textSize="14sp"
                        android:text="5 м/с"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" >

                    <ImageView

                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="#FFF" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:text="Влажность"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/humidity"
                        android:textSize="14sp"
                        android:text="70%"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" >

                    <ImageView

                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="#FFF" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:text="Давление"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/pressure"
                        android:textSize="14sp"
                        android:text="1023.0 мбар"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" >

                    <ImageView

                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        app:tint="#FFF" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:text="Сотворил:"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/info"
                        android:textSize="14sp"
                        android:text="EvgeniyDudin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
        
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/errorText"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>